# mista-wus-algo-trader

./: .gitignore  LICENSE  Makefile  README.md  model_context.txt  pyproject.toml
.cursor/rules/: crypto-trading-bot.mdc
config/: best_params _sharpe_ratio.yaml  best_params_cumulative_amount_optimized.yaml  optimize_params.yaml  runtime_config.yaml
scripts/: temp_remove_duplicates_from_details.py
src/trading_bots/: analyze_trades.py  backtest.py  config_models.py  config_utils.py  data_utils.py  fetch_data.py  forward_test.py  optimize.py  reporting_utils.py  run_batch_forward_test.py  run_batch_optimization.py  technical_indicators.py  trader.py
src/trading_bots/optimization/: multiprocessing_utils.py  parameter_utils.py  results.py  worker.py
src/trading_bots/strategies/: __init__.py  base_strategy.py  bb_reversion_strategy.py  breakout_strategy.py  hybrid_strategy.py  long_short_strategy.py  ma_crossover_strategy.py  mean_reversion_strategy.py  momentum.py  rsi_reversion_strategy.py  scalping.py
src/trading_bots/trader_components/: client_manager.py  data_handler.py  order_executor.py  position_manager.py  risk_manager.py  runtime_config_manager.py  state_manager.py  trade_logger.py
